# Master-Thesis-Code

./: .gitignore  env_setup.sh  setup.txt
lerf/: setup.txt
lerf/lerf/: diff.txt
lerf/lerf/lerf/: lerf.py  lerf_field.py  lerf_pipeline.py  sampler.py
lerf/lerf/lerf/data/: lerf_datamanager.py
objaverse-dl/: .gitignore  downloader.py  pyproject.toml
objaverse-dl/objaverse/: __init__.py
pipeline/: .gitignore  README.md  pyproject.toml
pipeline/dataset/: eval_categories.json  eval_categories_refined.json  eval_test_q1_uids.json  eval_test_q3_uids.json  eval_test_uids.json  eval_test_uids_h1.json  eval_test_uids_h2.json  eval_test_uids_q2.json  eval_test_uids_q4.json  eval_validation_h1_uids.json  eval_validation_h2_uids.json  eval_validation_q1_uids.json  eval_validation_q2_uids.json  eval_validation_q3_uids.json  eval_validation_q4_uids.json  eval_validation_uids.json
pipeline/experiments/: experiment_1_1.yaml  experiment_1_2.yaml  experiment_1_3.yaml  experiment_2_1.yaml  experiment_2_2.yaml  experiment_2_3.yaml  experiment_3_1.yaml  experiment_3_2.yaml  experiment_3_3.yaml
pipeline/rvs/configs/: evaluation_configs.py  pipeline_configs.py
pipeline/rvs/evaluation/: debug.py  embedder.py  evaluation.py  evaluation_method.py  index.py  lvis.py  pipeline.py  worker.py
pipeline/rvs/evaluation/analysis/: classification.py  clusters.py  histogram.py  loss.py  precision_recall.py  similarity.py  utils.py  views.py
pipeline/rvs/lerf/: lerf_datamanager.py  lerf_model.py
pipeline/rvs/migrations/: add_intermediate_results_json.py
pipeline/rvs/pipeline/: clustering.py  embedding.py  field.py  io.py  model.py  pipeline.py  renderer.py  sampler.py  selection.py  stage.py  state.py  training_controller.py  training_tracker.py  transform.py  views.py
pipeline/rvs/plugins/: types.py
pipeline/rvs/scripts/: ervs.py  ervs_debug.py  ervs_embed.py  ervs_summary.py  rvs.py  rvs_dataset.py
pipeline/rvs/utils/: blender_renderer.py  blender_renderer_objaverse.py  cache.py  config.py  console.py  dataclasses.py  debug.py  elbow.py  hash.py  logging.py  map.py  nerfstudio.py  plot.py  process.py  random.py  trimesh.py  xmeans.py
pyrender/: render.py  requirements.txt  test_run.sh
scripts/: eval.sh  eval_embed.sh  experiment.sh
