[project]
name = "rvs-pipeline"
version = "0.0.1"

dependencies=[
    "lerf>=0.1.1",
    "nerfstudio>=0.3.1",
    "pyrender>=0.1.45",
    "pyglet<2",
    "objaverse @ file:///home/ubuntu/repo/objaverse-dl",
    "gitpython",
    "fake-bpy-module",
    "pyclustering==0.10.1.2",
]

[tool.setuptools.packages.find]
include = ["rvs*"]

[project.scripts]
rvs = "rvs.scripts.rvs:entrypoint"
ervs = "rvs.scripts.ervs:entrypoint"
rvs_dataset = "rvs.scripts.rvs_dataset:entrypoint"
ervs_embed = "rvs.scripts.ervs_embed:entrypoint"
ervs_summary = "rvs.scripts.ervs_summary:entrypoint"
ervs_debug = "rvs.scripts.ervs_debug:entrypoint"

#[project.entry-points.'rvs.pipelines']
#default = 'rvs.rvs_configs:default_pipeline'

[tool.ruff]
line-length = 120
respect-gitignore = false
lint.select = [
    "E",  # pycodestyle errors.
    "F",  # Pyflakes rules.
    "I",  # isort formatting.
    "PLC",  # Pylint convention warnings.
    "PLE",  # Pylint errors.
    "PLR",  # Pylint refactor recommendations.
    "PLW",  # Pylint warnings.
    "NPY201" # NumPY 2.0 migration https://numpy.org/devdocs/numpy_2_0_migration_guide.html#ruff-plugin
]
lint.ignore = [
    "E501",  # Line too long.
    "F722",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "F821",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "PLR2004",  # Magic value used in comparison.
    "PLR0915",  # Too many statements.
    "PLR0913",  # Too many arguments.
    "PLC0414",  # Import alias does not rename variable. (this is used for exporting names)
    "PLC1901",  # Use falsey strings.
    "PLR5501",  # Use `elif` instead of `else if`.
    "PLR0911",  # Too many return statements.
    "PLR0912",  # Too many branches.
    "PLW0603",  # Globa statement updates are discouraged.
    "PLW2901",  # For loop variable overwritten.
    "PLR1730",  # Replace if statement with min/max
    "PLC0206",  # Extracting value from dictionary without calling `.items()`
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["rvs"]
split-on-trailing-comma = false
